@@ -33,6 +33,8 @@ Version 3.0.0 - 21 October 2009
  - Added 'make check' dependency on submitclient.
  - Only show the configured submission methods in the team manual.
  - Fix install of gendbpasswords and use /dev/urandom.
+ - In chroot-startstop, cope properly with /lib64 being a symlink to
+   /lib. Thanks Christoph Dittmann.
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
